--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>"Эфекстиное решение для вашего бизнеса"</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
-        <a href="index.html">WebStudio</a> 
+        <a class="logo" href="index.html"><img src="./image/logo2.svg" alt="лого2"></a> 
         <nav>
             <ul>
                 <li><a href="index.html">Студия</a></li>
@@ -16,7 +17,7 @@
                 <li><a href="index.html">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
+        <ul class="contacts">
             <li><a href="emailto:info@devstudio.com">info@devstudio.com </a></li>
             <li><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
         </ul>
@@ -27,28 +28,28 @@
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
         </section>
-        <section class="advantage">
+        <section class="section">
             <ul>
                 <li>
-                    <h3 class="company-advantages-title">Внимание к деталям</h3>
-                    <p class="company-advantages-descr">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <h3 class="section-title">Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3 class="company-advantages-title">Пунктуальность</h3>
-                    <p class="company-advantages-descr">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <h3 class="section-title">Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                  <li>
-                 <h3 class="company-advantages-title">Планирование</h3>
-                 <p class="company-advantages-descr">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                 <h3 class="section-title">Планирование</h3>
+                 <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3 class="company-advantages-title">Современные технологии</h3>
-                    <p class="company-advantages-descr">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <h3 class="section-title">Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
-        <section class="our activities">
-            <h2>Чем мы занимаемся</h2>
+        <section class="our-activities">
+            <h2 class="our-activities-title">Чем мы занимаемся</h2>
             <ul>
                 <li>
                     <img src="./image/business1.jpg" width="370" alt="клавиатура и схемы">
@@ -61,39 +62,39 @@
                 </li>
             </ul>
         </section>
-        <section class="our team">
-            <h2>Наша команда</h2>
+        <section class="our-team">
+            <h2 class="our-team-title">Наша команда</h2>
             <ul>
                 <li>
                     <img src="./image/фото1.jpg" width="270" alt="фото Игоря">
-                    <h3>Игорь Демьяненко</h3>
+                    <h3 class="name">Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
                     <img src="./image/фото2.jpg" width="270" alt="фото Ольги">
-                    <h3>Ольга Репина</h3>
+                    <h3 class="name">Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./image/фото3.jpg" width="270" alt="фото Николая">
-                    <h3>Николай Тарасов</h3>
+                    <h3 class="name">Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
                     <img src="./image/фото4.jpg" width="270" alt="фото Михаила">
-                    <h3>Михаил Ермаков</h3>
+                    <h3 class="name">Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <a href="/index.html">WebStudio</a>
+        <a class="logo-footer" href="/index.html"><img src="./image/logo.svg" alt="лого"></a>
         <address>
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
+            <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
             <ul>
-                <li><a href="emailto:info@devstudio.com">info@devstudio.com </a></li>
-                <li><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
+                <li class="contacts-footer"><a href="emailto:info@devstudio.com">info@devstudio.com </a></li>
+                <li class="contacts-footer"><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
