--- a/portfolio.html
+++ b/portfolio.html
@@ -5,22 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
-        <a href="index.html">WebStudio</a> 
-        <nav>
-            <ul>
-                <li><a href="index.html">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="index.html">Контакты</a></li>
-            </ul>
-        </nav>
+<header>
+    <a class="logo" href="index.html"><img src="./image/logo2.svg" alt="лого2"></a>
+    <nav>
         <ul>
-            <li><a href="emailto:info@devstudio.com">info@devstudio.com </a></li>
-            <li><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
+            <li><a href="index.html">Студия</a></li>
+            <li><a href="./portfolio.html">Портфолио</a></li>
+            <li><a href="index.html">Контакты</a></li>
         </ul>
-    </header>
+    </nav>
+    <ul class="contacts">
+        <li><a href="emailto:info@devstudio.com">info@devstudio.com </a></li>
+        <li><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
+    </ul>
+</header>
     <main>
 <section>
     <ul>
@@ -37,42 +38,42 @@
             <p>Веб-сайт</p>
         </li>
         <li>
-            <img src="./image/Постер New Orlean vs Golden Star.jpg" alt="постер">
+            <img src="./image/ПостерNewOrleanvsGoldenStar.jpg" alt="постер">
             <h2>Постер New Orlean vs Golden Star</h2>
             <p>Веб-Дизайн</p>
         </li>
         <li>
-            <img src="./image/Ресторан Seafood.jpg" alt="Ресторан Seafood">
+            <img src="./image/РесторанSeafood.jpg" alt="Ресторан Seafood">
             <h2>Ресторан Seafood</h2>
             <p>Веб-Приложение</p>
         </li>
         <li>
-            <img src="./image/Проект Prime.jpg" alt="Проект Prime">
+            <img src="./image/ПроектPrime.jpg" alt="Проект Prime">
             <h2>Проект Prime</h2>
             <p>Маркетинг</p>
         </li>
         <li>
-            <img src="./image/Проект Boxes.jpg" alt="Проект Boxes">
+            <img src="./image/ПроектBoxes.jpg" alt="Проект Boxes" width="370">
             <h2>Проект Boxes</h2>
             <p>Приложение</p>
         </li>
         <li>
-            <img src="./image/Inspiration has no Borders.jpg" alt="Inspiration has no Borders">
+            <img src="./image/InspirationhasnoBorders.jpg" alt="Inspiration has no Borders" width="370">
             <h2>Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
         </li>
         <li>
-            <img src="./image/Издание Limited Edition.jpg" alt="Издание Limited Edition">
+            <img src="./image/ИзданиеLimitedEdition.jpg" alt="Издание Limited Edition" width="370">
             <h2>Издание Limited Edition</h2>
             <p>Дизайн</p>
         </li>
         <li>
-            <img src="./image/Проект LAB.jpg" alt="Проект LAB">
+            <img src="./image/ПроектLAB.jpg" alt="Проект LAB" width="370">
             <h2>Проект LAB</h2>
             <p>Веб-Дизайн</p>
         </li>
         <li>
-            <img src="./image/Growing Business.jpg" alt="Growing Business">
+            <img src="./image/GrowingBusiness.jpg" alt="Growing Business" width="370">
             <h2>Growing Business</h2>
             <p>Приложение</p>
         </li>
@@ -80,17 +81,16 @@
 </section>
 
     </main>
-    <footer>
-        <a href="/index.html">WebStudio</a>
-        <address>
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
-            <ul>
-                <li><a href="emailto:info@devstudio.com">info@devstudio.com </a></li>
-                <li><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
-            </ul>
-        </address>
-    </footer>
-
+        <footer>
+            <a class="logo-footer" href="/index.html"><img src="./image/logo.svg" alt="лого"></a>
+            <address>
+                <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
+                <ul>
+                    <li class="contacts-footer"><a href="emailto:info@devstudio.com">info@devstudio.com </a></li>
+                    <li class="contacts-footer"><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
+                </ul>
+            </address>
+        </footer>
     
 </body>
 </html>
