Сделал css для портфолио (без шрифта)

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </section>
     </main>
     <footer>
-        <a class="logo-footer" href="/index.html"><img src="./image/logo.svg" alt="лого"></a>
+        <a class="logo-footer" href="index.html"><img src="./image/logo.svg" alt="лого"></a>
         <address>
             <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
             <ul>
