--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
 </header>
     <main>
 <section>
-    <ul>
+    <ul class="filter">
         <li><button type="button">Все</button></li>
         <li><button type="button">Веб-сайты</button></li>
         <li><button type="button">Приложения</button></li>
@@ -34,47 +34,47 @@
     <ul>
         <li>
             <img src="./image/технокряк.jpg" alt="технокряк">
-            <h2>Технокряк</h2>
+            <h2 class="portfolio-title">Технокряк</h2>
             <p>Веб-сайт</p>
         </li>
         <li>
             <img src="./image/ПостерNewOrleanvsGoldenStar.jpg" alt="постер">
-            <h2>Постер New Orlean vs Golden Star</h2>
+            <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
             <p>Веб-Дизайн</p>
         </li>
         <li>
             <img src="./image/РесторанSeafood.jpg" alt="Ресторан Seafood">
-            <h2>Ресторан Seafood</h2>
+            <h2 class="portfolio-title">Ресторан Seafood</h2>
             <p>Веб-Приложение</p>
         </li>
         <li>
             <img src="./image/ПроектPrime.jpg" alt="Проект Prime">
-            <h2>Проект Prime</h2>
+            <h2 class="portfolio-title">Проект Prime</h2>
             <p>Маркетинг</p>
         </li>
         <li>
             <img src="./image/ПроектBoxes.jpg" alt="Проект Boxes" width="370">
-            <h2>Проект Boxes</h2>
+            <h2 class="portfolio-title">Проект Boxes</h2>
             <p>Приложение</p>
         </li>
         <li>
             <img src="./image/InspirationhasnoBorders.jpg" alt="Inspiration has no Borders" width="370">
-            <h2>Inspiration has no Borders</h2>
+            <h2 class="portfolio-title">Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
         </li>
         <li>
             <img src="./image/ИзданиеLimitedEdition.jpg" alt="Издание Limited Edition" width="370">
-            <h2>Издание Limited Edition</h2>
+            <h2 class="portfolio-title">Издание Limited Edition</h2>
             <p>Дизайн</p>
         </li>
         <li>
             <img src="./image/ПроектLAB.jpg" alt="Проект LAB" width="370">
-            <h2>Проект LAB</h2>
+            <h2 class="portfolio-title">Проект LAB</h2>
             <p>Веб-Дизайн</p>
         </li>
         <li>
             <img src="./image/GrowingBusiness.jpg" alt="Growing Business" width="370">
-            <h2>Growing Business</h2>
+            <h2 class="portfolio-title">Growing Business</h2>
             <p>Приложение</p>
         </li>
     </ul>
