--- a/portfolio.html
+++ b/portfolio.html
@@ -23,74 +23,74 @@
     </ul>
 </header>
     <main>
-<section>
-    <ul class="filter">
-        <li><button type="button">Все</button></li>
-        <li><button type="button">Веб-сайты</button></li>
-        <li><button type="button">Приложения</button></li>
-        <li><button type="button">Дизайн</button></li>
-        <li><button type="button">Маркетинг</button></li>
-    </ul>
-    <ul>
-        <li>
-            <img src="./image/технокряк.jpg" alt="технокряк">
-            <h2 class="portfolio-title">Технокряк</h2>
-            <p>Веб-сайт</p>
-        </li>
-        <li>
-            <img src="./image/ПостерNewOrleanvsGoldenStar.jpg" alt="постер">
-            <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-            <p>Веб-Дизайн</p>
-        </li>
-        <li>
-            <img src="./image/РесторанSeafood.jpg" alt="Ресторан Seafood">
-            <h2 class="portfolio-title">Ресторан Seafood</h2>
-            <p>Веб-Приложение</p>
-        </li>
-        <li>
-            <img src="./image/ПроектPrime.jpg" alt="Проект Prime">
-            <h2 class="portfolio-title">Проект Prime</h2>
-            <p>Маркетинг</p>
-        </li>
-        <li>
-            <img src="./image/ПроектBoxes.jpg" alt="Проект Boxes" width="370">
-            <h2 class="portfolio-title">Проект Boxes</h2>
-            <p>Приложение</p>
-        </li>
-        <li>
-            <img src="./image/InspirationhasnoBorders.jpg" alt="Inspiration has no Borders" width="370">
-            <h2 class="portfolio-title">Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
-        </li>
-        <li>
-            <img src="./image/ИзданиеLimitedEdition.jpg" alt="Издание Limited Edition" width="370">
-            <h2 class="portfolio-title">Издание Limited Edition</h2>
-            <p>Дизайн</p>
-        </li>
-        <li>
-            <img src="./image/ПроектLAB.jpg" alt="Проект LAB" width="370">
-            <h2 class="portfolio-title">Проект LAB</h2>
-            <p>Веб-Дизайн</p>
-        </li>
-        <li>
-            <img src="./image/GrowingBusiness.jpg" alt="Growing Business" width="370">
-            <h2 class="portfolio-title">Growing Business</h2>
-            <p>Приложение</p>
-        </li>
-    </ul>
-</section>
+        <section>
+            <ul class="filter">
+                <li><button type="button">Все</button></li>
+                <li><button type="button">Веб-сайты</button></li>
+                <li><button type="button">Приложения</button></li>
+                <li><button type="button">Дизайн</button></li>
+                <li><button type="button">Маркетинг</button></li>
+            </ul>
+            <ul>
+                 <li>
+                    <img src="./image/технокряк.jpg" alt="технокряк" width="370">
+                    <h2 class="portfolio-title">Технокряк</h2>
+                    <p>Веб-сайт</p>
+                </li>
+                <li>
+                    <img src="./image/ПостерNewOrleanvsGoldenStar.jpg" alt="постер" width="370">
+                    <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+                    <p>Веб-Дизайн</p>
+                </li>
+                <li>
+                    <img src="./image/РесторанSeafood.jpg" alt="Ресторан Seafood" width="370">
+                    <h2 class="portfolio-title">Ресторан Seafood</h2>
+                    <p>Веб-Приложение</p>
+                </li>
+                <li>
+                    <img src="./image/ПроектPrime.jpg" alt="Проект Prime" width="370">
+                    <h2 class="portfolio-title">Проект Prime</h2>
+                    <p>Маркетинг</p>
+                </li>
+                <li>
+                    <img src="./image/ПроектBoxes.jpg" alt="Проект Boxes" width="370" >
+                    <h2 class="portfolio-title">Проект Boxes</h2>
+                    <p>Приложение</p>
+                </li>
+                <li>
+                    <img src="./image/InspirationhasnoBorders.jpg" alt="Inspiration has no Borders" width="370">
+                    <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                    <p>Веб-сайт</p>
+                </li>
+                <li>
+                    <img src="./image/ИзданиеLimitedEdition.jpg" alt="Издание Limited Edition" width="370">
+                    <h2 class="portfolio-title">Издание Limited Edition</h2>
+                    <p>Дизайн</p>
+                </li>
+                <li>
+                    <img src="./image/ПроектLAB.jpg" alt="Проект LAB" width="370">
+                    <h2 class="portfolio-title">Проект LAB</h2>
+                    <p>Веб-Дизайн</p>
+                </li>
+                <li>
+                    <img src="./image/GrowingBusiness.jpg" alt="Growing Business" width="370">
+                    <h2 class="portfolio-title">Growing Business</h2>
+                    <p>Приложение</p>
+                </li>
+            </ul>
+        </section>
 
     </main>
-        <footer>
-            <a class="logo-footer" href="/index.html"><img src="./image/logo.svg" alt="лого"></a>
-            <address>
-                <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
-                <ul>
-                    <li class="contacts-footer"><a href="emailto:info@devstudio.com">info@devstudio.com </a></li>
-                    <li class="contacts-footer"><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
-                </ul>
-            </address>
-        </footer>
+    <footer>
+        <a class="logo-footer" href="/index.html"><img src="./image/logo.svg" alt="лого"></a>
+        <address>
+            <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
+            <ul>
+                <li class="contacts-footer"><a href="emailto:info@devstudio.com">info@devstudio.com </a></li>
+                <li class="contacts-footer"><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
+            </ul>
+        </address>
+    </footer>
     
 </body>
 </html>
