--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
     </ul>
 </header>
     <main>
-        <section>
+        <section class="portfolio">
             <ul class="filter">
                 <li><button type="button">Все</button></li>
                 <li><button type="button">Веб-сайты</button></li>
@@ -33,49 +33,67 @@
             </ul>
             <ul>
                  <li>
-                    <img src="./image/технокряк.jpg" alt="технокряк" width="370">
-                    <h2 class="portfolio-title">Технокряк</h2>
-                    <p>Веб-сайт</p>
+                    <a href="">
+                        <img src="./image/технокряк.jpg" alt="технокряк" width="370">
+                        <h2 class="portfolio-title">Технокряк</h2>
+                        <p>Веб-сайт</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./image/ПостерNewOrleanvsGoldenStar.jpg" alt="постер" width="370">
-                    <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-                    <p>Веб-Дизайн</p>
+                    <a href="">
+                        <img src="./image/ПостерNewOrleanvsGoldenStar.jpg" alt="постер" width="370">
+                        <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+                        <p>Веб-Дизайн</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./image/РесторанSeafood.jpg" alt="Ресторан Seafood" width="370">
-                    <h2 class="portfolio-title">Ресторан Seafood</h2>
-                    <p>Веб-Приложение</p>
+                    <a href="">
+                        <img src="./image/РесторанSeafood.jpg" alt="Ресторан Seafood" width="370">
+                        <h2 class="portfolio-title">Ресторан Seafood</h2>
+                        <p>Веб-Приложение</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./image/ПроектPrime.jpg" alt="Проект Prime" width="370">
-                    <h2 class="portfolio-title">Проект Prime</h2>
-                    <p>Маркетинг</p>
+                    <a href="">
+                        <img src="./image/ПроектPrime.jpg" alt="Проект Prime" width="370">
+                        <h2 class="portfolio-title">Проект Prime</h2>
+                        <p>Маркетинг</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./image/ПроектBoxes.jpg" alt="Проект Boxes" width="370" >
-                    <h2 class="portfolio-title">Проект Boxes</h2>
-                    <p>Приложение</p>
+                    <a href="">
+                        <img src="./image/ПроектBoxes.jpg" alt="Проект Boxes" width="370" >
+                        <h2 class="portfolio-title">Проект Boxes</h2>
+                        <p>Приложение</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./image/InspirationhasnoBorders.jpg" alt="Inspiration has no Borders" width="370">
-                    <h2 class="portfolio-title">Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
+                    <a href="">
+                        <img src="./image/InspirationhasnoBorders.jpg" alt="Inspiration has no Borders" width="370">
+                        <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                        <p>Веб-сайт</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./image/ИзданиеLimitedEdition.jpg" alt="Издание Limited Edition" width="370">
-                    <h2 class="portfolio-title">Издание Limited Edition</h2>
-                    <p>Дизайн</p>
+                    <a href="">
+                        <img src="./image/ИзданиеLimitedEdition.jpg" alt="Издание Limited Edition" width="370">
+                        <h2 class="portfolio-title">Издание Limited Edition</h2>
+                        <p>Дизайн</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./image/ПроектLAB.jpg" alt="Проект LAB" width="370">
-                    <h2 class="portfolio-title">Проект LAB</h2>
-                    <p>Веб-Дизайн</p>
+                    <a href="">
+                        <img src="./image/ПроектLAB.jpg" alt="Проект LAB" width="370">
+                        <h2 class="portfolio-title">Проект LAB</h2>
+                        <p>Веб-Дизайн</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./image/GrowingBusiness.jpg" alt="Growing Business" width="370">
-                    <h2 class="portfolio-title">Growing Business</h2>
-                    <p>Приложение</p>
+                    <a href="">
+                        <img src="./image/GrowingBusiness.jpg" alt="Growing Business" width="370">
+                        <h2 class="portfolio-title">Growing Business</h2>
+                        <p>Приложение</p>
+                    </a>
                 </li>
             </ul>
         </section>
