Внес изминения по тексту

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>"Эфекстиное решение для вашего бизнеса"</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -32,19 +35,19 @@
             <ul>
                 <li>
                     <h3 class="section-title">Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
                     <h3 class="section-title">Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                  <li>
                  <h3 class="section-title">Планирование</h3>
-                 <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                 <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
                     <h3 class="section-title">Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
@@ -68,22 +71,22 @@
                 <li>
                     <img src="./image/фото1.jpg" width="270" alt="фото Игоря">
                     <h3 class="name">Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
+                    <p class="job">Product Designer</p>
                 </li>
                 <li>
                     <img src="./image/фото2.jpg" width="270" alt="фото Ольги">
                     <h3 class="name">Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <p class="job">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./image/фото3.jpg" width="270" alt="фото Николая">
                     <h3 class="name">Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <p class="job">Marketing</p>
                 </li>
                 <li>
                     <img src="./image/фото4.jpg" width="270" alt="фото Михаила">
                     <h3 class="name">Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                    <p class="job">UI Designer</p>
                 </li>
             </ul>
         </section>
