--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <header>
         <a class="logo" href="index.html"><img src="./image/logo2.svg" alt="лого2"></a> 
         <nav>
-            <ul>
-                <li><a href="index.html">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="index.html">Контакты</a></li>
+            <ul class="navigation" >
+                <li><a class="navigation-link" href="index.html">Студия</a></li>
+                <li><a class="navigation-link" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="navigation-link" href="index.html">Контакты</a></li>
             </ul>
         </nav>
         <ul class="contacts">
-            <li><a href="emailto:info@devstudio.com">info@devstudio.com </a></li>
-            <li><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
+            <li><a class="contacts-link" href="emailto:info@devstudio.com">info@devstudio.com </a></li>
+            <li><a class="contacts-link" href="tel:+380961111111"> +38 096 111 11 11</a></li>
         </ul>
     </header>
         
@@ -95,9 +95,9 @@
         <a class="logo-footer" href="index.html"><img src="./image/logo.svg" alt="лого"></a>
         <address>
             <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
-            <ul>
-                <li class="contacts-footer"><a href="emailto:info@devstudio.com">info@devstudio.com </a></li>
-                <li class="contacts-footer"><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
+            <ul class="list">
+                <li><a class="contacts-footer" href="emailto:info@devstudio.com">info@devstudio.com </a></li>
+                <li><a class="contacts-footer" href="tel:+380961111111"> +38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
