--- a/portfolio.html
+++ b/portfolio.html
@@ -11,91 +11,91 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-<header>
-    <a class="logo" href="index.html"><img src="./image/logo2.svg" alt="лого2"></a>
-    <nav>
-        <ul>
-            <li><a href="index.html">Студия</a></li>
-            <li><a href="./portfolio.html">Портфолио</a></li>
-            <li><a href="index.html">Контакты</a></li>
+    <header>
+        <a class="logo" href="index.html"><img src="./image/logo2.svg" alt="лого2"></a>
+        <nav>
+            <ul class="navigation">
+                <li><a class="navigation-link" href="index.html">Студия</a></li>
+                <li><a class="navigation-link" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="navigation-link" href="index.html">Контакты</a></li>
+            </ul>
+        </nav>
+        <ul class="contacts">
+            <li><a class="contacts-link" href="emailto:info@devstudio.com">info@devstudio.com </a></li>
+            <li><a class="contacts-link" href="tel:+380961111111"> +38 096 111 11 11</a></li>
         </ul>
-    </nav>
-    <ul class="contacts">
-        <li><a href="emailto:info@devstudio.com">info@devstudio.com </a></li>
-        <li><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
-    </ul>
-</header>
+    </header>
     <main>
         <section class="portfolio">
             <ul class="filter">
-                <li><button type="button">Все</button></li>
-                <li><button type="button">Веб-сайты</button></li>
-                <li><button type="button">Приложения</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+                <li><button class="filter-button" type="button">Все</button></li>
+                <li><button class="filter-button" type="button">Веб-сайты</button></li>
+                <li><button class="filter-button" type="button">Приложения</button></li>
+                <li><button class="filter-button" type="button">Дизайн</button></li>
+                <li><button class="filter-button" type="button">Маркетинг</button></li>
             </ul>
-            <ul>
-                 <li>
+            <ul class="portfolio-main">
+                 <li class="portfolio-list">
                     <a href="">
                         <img src="./image/технокряк.jpg" alt="технокряк" width="370">
                         <h2 class="portfolio-title">Технокряк</h2>
-                        <p>Веб-сайт</p>
+                        <p class="portfolio-text">Веб-сайт</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="./image/ПостерNewOrleanvsGoldenStar.jpg" alt="постер" width="370">
                         <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-                        <p>Веб-Дизайн</p>
+                        <p class="portfolio-text">Веб-Дизайн</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="./image/РесторанSeafood.jpg" alt="Ресторан Seafood" width="370">
                         <h2 class="portfolio-title">Ресторан Seafood</h2>
-                        <p>Веб-Приложение</p>
+                        <p class="portfolio-text">Веб-Приложение</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="./image/ПроектPrime.jpg" alt="Проект Prime" width="370">
                         <h2 class="portfolio-title">Проект Prime</h2>
-                        <p>Маркетинг</p>
+                        <p class="portfolio-text">Маркетинг</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="./image/ПроектBoxes.jpg" alt="Проект Boxes" width="370" >
                         <h2 class="portfolio-title">Проект Boxes</h2>
-                        <p>Приложение</p>
+                        <p class="portfolio-text">Приложение</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="./image/InspirationhasnoBorders.jpg" alt="Inspiration has no Borders" width="370">
                         <h2 class="portfolio-title">Inspiration has no Borders</h2>
-                        <p>Веб-сайт</p>
+                        <p class="portfolio-text">Веб-сайт</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="./image/ИзданиеLimitedEdition.jpg" alt="Издание Limited Edition" width="370">
                         <h2 class="portfolio-title">Издание Limited Edition</h2>
-                        <p>Дизайн</p>
+                        <p class="portfolio-text">Дизайн</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="./image/ПроектLAB.jpg" alt="Проект LAB" width="370">
                         <h2 class="portfolio-title">Проект LAB</h2>
-                        <p>Веб-Дизайн</p>
+                        <p class="portfolio-text">Веб-Дизайн</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="./image/GrowingBusiness.jpg" alt="Growing Business" width="370">
                         <h2 class="portfolio-title">Growing Business</h2>
-                        <p>Приложение</p>
+                        <p class="portfolio-text">Приложение</p>
                     </a>
                 </li>
             </ul>
@@ -103,12 +103,12 @@
 
     </main>
     <footer>
-        <a class="logo-footer" href="/index.html"><img src="./image/logo.svg" alt="лого"></a>
+        <a class="logo-footer" href="index.html"><img src="./image/logo.svg" alt="лого"></a>
         <address>
             <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
-            <ul>
-                <li class="contacts-footer"><a href="emailto:info@devstudio.com">info@devstudio.com </a></li>
-                <li class="contacts-footer"><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
+            <ul class="list">
+                <li><a class="contacts-footer" href="emailto:info@devstudio.com">info@devstudio.com </a></li>
+                <li><a class="contacts-footer" href="tel:+380961111111"> +38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
