--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>"Эфекстиное решение для вашего бизнеса"</title>
+    <title>"Эфективное решение для вашего бизнеса"</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
         <a class="logo" href="index.html"><img src="./image/logo2.svg" alt="лого2"></a> 
         <nav>
             <ul class="navigation" >
-                <li><a class="navigation-link" href="index.html">Студия</a></li>
+                <li><a class="navigation-link current" href="index.html">Студия</a></li>
                 <li><a class="navigation-link" href="./portfolio.html">Портфолио</a></li>
                 <li><a class="navigation-link" href="index.html">Контакты</a></li>
             </ul>
