Внес изминения по надписи WabStudio

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>"Эфективное решение для вашего бизнеса"</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
-        <a class="logo" href="index.html"><img src="./image/logo2.svg" alt="лого2"></a> 
+        <a class="logo" href="index.html">Web<span class="studio">Studio</span></a>
         <nav>
             <ul class="navigation" >
                 <li><a class="navigation-link current" href="index.html">Студия</a></li>
@@ -92,7 +93,7 @@
         </section>
     </main>
     <footer>
-        <a class="logo-footer" href="index.html"><img src="./image/logo.svg" alt="лого"></a>
+        <a class="logo" href="index.html">Web<span class="footer-studio">Studio</span></a>
         <address>
             <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
             <ul class="list">
