--- a/portfolio.html
+++ b/portfolio.html
@@ -7,12 +7,14 @@
     <title>portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">    
+<link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
-        <a class="logo" href="index.html"><img src="./image/logo2.svg" alt="лого2"></a>
+        <a class="logo" href="index.html">Web<span class="studio">Studio</span></a>
         <nav>
             <ul class="navigation">
                 <li><a class="navigation-link" href="index.html">Студия</a></li>
@@ -103,7 +105,7 @@
 
     </main>
     <footer>
-        <a class="logo-footer" href="index.html"><img src="./image/logo.svg" alt="лого"></a>
+        <a class="logo" href="index.html">Web<span class="footer-studio">Studio</span></a>
         <address>
             <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
             <ul class="list">
